[package]
name = "compress-huffman-rs"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance"]
description = "Huffman coding compression library: frequency table construction, Huffman tree building, canonical code generation, and encode/decode with comprehensive edge-case handling."
documentation = "https://docs.rs/compress-huffman-rs"
repository = "https://github.com/SuperInstance/compress-huffman-rs"
readme = "README.md"
keywords = ["huffman", "compression", "encoding", "canonical", "entropy"]
categories = ["algorithms", "compression", "data-structures"]
license = "MIT OR Apache-2.0"

[dev-dependencies]
